<resources>
    <string name="sdk_app_name">黄历天气</string>
    <string name="finish_text">完成</string>
    <string name="close">关闭</string>
    <string name="back">返回</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="now_weather_info">当日天气</string>
    <string name="city">城市</string>
    <string name="cityset">城市管理</string>
    <string name="citysetadd">添加</string>
    <string name="citysetMgr">管理</string>
    <string name="cityaddedithit">搜索全球城市(中文/拼音)</string>
    <string name="cityaddtitle">添加城市</string>
    <string name="cityseletitle">选择城市</string>
    <string name="delete_city_hint">选择相应城市后点击</string>
    <string name="sort_city_hint">点击相应城市拖动</string>
    <string name="none_city_data_hint">请添加城市!</string>
    <string name="tomorrow">明天</string>
    <string name="weather_wrong_time_msg">系统时间错误，请修正后再更新</string>
    <string name="waring_wrong_time_msg">系统时间错误，无法获取预警信息，请修正后重试</string>
    <string name="index_wrong_time_msg">"系统时间错误
请修正后，再点击刷新"</string>
    <string name="tab_weather">天气</string>
    <string name="tab_calendar">万年历</string>
    <string name="tab_huli_info">黄历</string>
    <string name="tab_more">设置</string>
    <string name="loadingTxt">正在加载....</string>
    <string name="about">　　91黄历天气是由博远无线研发，除了方便人们查询天气外，还提供了中国传统黄历现代文宜忌功能，例如结合男女生肖的结婚日查询。</string>
    <string name="copyright">"（C）1999-2013
博远无线 版权所有"</string>
    <string name="install">安装</string>
    <string name="calendar_down_hint">使用完整功能，请安装 “91黄历天气” 完整版</string>
    <string name="skin_path">PandaHome2/91clockandweather/skins/</string>
    <string name="widget_process">com.nd.weather.widget.WidgetService</string>
    <string name="provider_process">com.nd.weather.widget.provider</string>
    <string name="thenme_ask_action">com.nd.android.pandahome.ASK_THEME</string>
    <string name="thenme_change_action">com.nd.android.pandahome.THEME_INFO</string>
    <string name="localing_text">定位中...</string>
    <string name="no_net_to_local_text">未连接网络，无法定位</string>
    <string name="analytics_weather_click_distribute">62001213</string>
    <string name="analytics_weather_download_huangli">63001214</string>
    <string name="analytics_weather_install_huangli">63101215</string>
    <string name="sp_widget_recommend_app">12</string>
    <string name="default_skin_path">weather_skin2/</string>
    <string name="common_button_confirm">确定</string>
    <string name="common_button_cancel">取消</string>
    <string name="common_button_apply">Apply</string>
    <string name="common_button_return">Return</string>
    <string name="common_button_preview">Preview</string>
    <string name="common_button_download_more">More</string>
    <string name="common_button_download_skin">More theme</string>
    <string name="common_button_download">Download</string>
    <string name="common_button_save">Save</string>
    <string name="common_button_discard">Discard</string>
    <string name="common_button_back_to_home">Home</string>
    <string name="common_button_default">Default</string>
    <string name="common_button_share">Share</string>
    <string name="common_button_search">Search</string>
    <string name="common_button_view_detail">Details</string>
    <string name="common_button_commit">Submit</string>
    <string name="common_button_add">New</string>
    <string name="common_button_addto">Add</string>
    <string name="common_button_edit">Edit</string>
    <string name="common_button_delete">删除</string>
    <string name="common_button_modify">Modify</string>
    <string name="common_button_set">Settings</string>
    <string name="common_button_update">Update</string>
    <string name="common_button_uninstall">Uninstall</string>
    <string name="common_button_install">Install</string>
    <string name="common_button_redownload">Redownload</string>
    <string name="common_button_refresh">Refresh</string>
    <string name="common_button_manager">Manage</string>
    <string name="common_button_enabled">Enable</string>
    <string name="common_button_closed">Close</string>
    <string name="common_button_close">Close</string>
    <string name="common_checkbox_not_alert">"Don't remind me again!"</string>
    <string name="common_button_i_know">I know</string>
    <string name="common_button_continue">继续</string>
    <string name="common_button_recover">Recover</string>
    <string name="common_button_complate">Complete</string>
    <string name="common_button_editable">Edit</string>
    <string name="common_button_clear">Clear</string>
    <string name="common_tip">提示</string>
    <string name="common_alert">Warn</string>
    <string name="common_download_success">Download successfully</string>
    <string name="common_download_ended">Download completed</string>
    <string name="common_download_failed">Download failed</string>
    <string name="common_uninstalled">Uninstalled</string>
    <string name="common_downloading">Downloading..</string>
    <string name="common_loading">Loading...</string>
    <string name="common_install_now">Install now</string>
    <string name="common_download_now">Download now</string>
    <string name="common_refresh">Refresh</string>
    <string name="common_installed">Installed</string>
    <string name="common_refresh_failed">Refresh failed</string>
    <string name="common_button_enter">Enter</string>
    <string name="common_button_open_now">Open Now</string>
    <string name="common_button_use_now">Use Now</string>
    <string name="common_button_restart_now">Restart Now</string>
    <string name="common_button_open">Open</string>
    <string name="dockbar_null_intent">Data error</string>
    <string name="settings_home_common">常规设置</string>
    <string name="settings_open_zns">开启锁屏</string>
    <string name="setting_open_lastest_style">开启七彩风格密码</string>
    <string name="settings_initial">初始设置</string>
    <string name="settings_initial_tips">「悬浮窗」、「设置开机自启动」</string>
    <string name="settings_more_tips_2">「去除双重锁屏」等开关设置</string>
    <string name="settings_safe">使用91智能锁密码</string>
    <string name="settings_safe_password_none">无</string>
    <string name="settings_safe_password_pin">数字密码</string>
    <string name="settings_safe_password_gesture">图形密码</string>
    <string name="settings_safe_password_gesture_line">隐藏图形密码连线</string>
    <string name="settings_safe_bilayer_lock_switch">直接进入密码页</string>
    <string name="settings_safe_lock_background_blur_switch">密码锁背景模糊开关</string>
    <string name="settings_safe_bilayer_lock_switch_summary">打开后，锁屏直接显示密码锁，不出现滑动锁</string>
    <string name="settings_safe_force_unlock">应急解锁</string>
    <string name="settings_safe_force_unlock_summary">按组合键:音量「+」和「返回键」应急解锁</string>
    <string name="settings_safe_password_bak">备用解锁</string>
    <string name="settings_safe_password_view_animation">密码界面动画</string>
    <string name="settings_safe_password_view_color_picker">七彩密码颜色</string>
    <string name="settings_safe_unlock_animation">解锁动画</string>
    <string name="settings_safe_password_bak_summary">遗忘密码时，可以使用备用密码解锁</string>
    <string name="settings_change_lock_wallpaper">锁屏壁纸</string>
    <string name="settings_lock_tone">锁屏声音</string>
    <string name="settings_clear_lock_tone">解锁提示音</string>
    <string name="settings_follow_launcher_change_skin">跟随主题换肤</string>
    <string name="settings_follow_launcher_change_skin_summary">跟随桌面主题变换锁屏样式</string>
    <string name="settings_follow_launcher_change_skin_pandahome_summary">跟随桌面主题变换锁屏样式</string>
    <string name="settings_home_advanced">高级设置</string>
    <string name="settings_dislodge_double_lock">去除双重锁屏</string>
    <string name="settings_dislodge_double_lock_summary">消除系统锁屏和第三方锁屏出现的双锁屏</string>
    <string name="settings_home_more">更多设置</string>
    <string name="settings_home_toolbox">工具箱和相机</string>
    <string name="settings_home_more_close">关屏设置</string>
    <string name="settings_home_other">其他</string>
    <string name="settings_common_question">常见问题</string>
    <string name="settings_about_zns">关于</string>
    <string name="settings_reboot">重启锁屏</string>
    <string name="settings_lock_background">锁屏背景</string>
    <string name="settings_lock_background_summary">锁屏默认壁纸</string>
    <string name="settings_launcher_background">桌面背景</string>
    <string name="settings_launcher_background_summary">跟随桌面壁纸变换锁屏壁纸</string>
    <string name="settings_custom_background">自定义背景</string>
    <string name="settings_switch_shield_volume_key">屏蔽音量键</string>
    <string name="settings_switch_offscreen_sound">关屏音效</string>
    <string name="settings_switch_theme_sound">主题音效</string>
    <string name="settings_switch_theme_sound_summary">含有动态壁纸的锁屏主题音效设置</string>
    <string name="settings_sound_night_mode">夜间模式</string>
    <string name="settings_switch_vibration">解锁时震动</string>
    <string name="settings_default_clear_lock_tone">默认提示音</string>
    <string name="settings_sound_night_mode_summary">22点-早上8点锁屏静音</string>
    <string name="settings_start_system_password">使用系统锁屏密码</string>
    <string name="settings_safe_setting">密码设置</string>
    <string name="settings_shield_home_key_summary">防止点击Home键直接解锁</string>
    <string name="settings_shield_home_key_clean_category">Home键锁定</string>
    <string name="settings_shield_home_key_clean_default_launcher">Home键锁定</string>
    <string name="settings_shield_home_key_chose_category">默认桌面设置</string>
    <string name="settings_shield_home_key_chose_default_launcher">解锁后默认桌面</string>
    <string name="settings_shield_home_key_chose_default_launcher_summary">选择你正在使用的桌面程序</string>
    <string name="settings_safe_password">密码设置</string>
    <string name="settings_safe_other">安全设置</string>
    <string name="settings_switch_full_screen">通知栏隐藏</string>
    <string name="settings_switch_notification_disable">通知栏禁止下拉</string>
    <string name="settings_switch_notification_disable_tips">锁屏时禁止通知栏下拉</string>
    <string name="setting_use_distance_sensor_for_wechat_text">解决微信听筒问题</string>
    <string name="setting_use_distance_sensor_for_wechat_summary">使用距离传感器，解决微信听筒误锁屏</string>
    <string name="settings_switch_full_screen_summary">锁屏全屏显示</string>
    <string name="settings_switch_overturn_lock">翻转关屏</string>
    <string name="settings_switch_overturn_lock_summary">翻转关屏屏幕</string>
    <string name="settings_cache_clean">缓存清理</string>
    <string name="settings_cache_clean_summary">清理主题和壁纸缓存图片</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_launcherv6_lock_style">锁屏样式</string>
    <string name="new_user_guide_setting_second_launcher_tips">未设置</string>
    <string name="setting_one_key_lock">一键关屏</string>
    <string name="settings_switch_lock_booster">锁屏加速器</string>
    <string name="settings_switch_lock_booster_summary">减少锁屏被系统清除的异常概率。若取消通知栏提示，请关闭开关</string>
    <string name="settings_char_icon_pwd_set_text">修改锁屏</string>
    <string name="settings_char_icon_pwd_set_text_summary">修改该锁屏的密码、壁纸、按钮及颜色</string>
    <string name="settings_ios8_is_open_lunar">显示农历</string>
    <string name="settings_anim_screen_on">显示开屏动画</string>
    <string name="settings_notification_lock_enter">锁屏消息</string>
    <string name="settings_notification_lock_summary">锁屏支持QQ、微信等消息</string>
    <string name="settings_notification_lock_switch">消息开关</string>
    <string name="settings_notification_lock_bright">消息亮屏</string>
    <string name="settings_notification_lock_hide_content">不显示消息内容</string>
    <string name="settings_notification_lock_receive_app">选择应用</string>
    <string name="settings_notification_lock_receive_app_summary">选择需要显示消息的应用</string>
    <string name="settings_notification_lock_bright_summary">当接收到新消息时点亮屏幕</string>
    <string name="settings_notification_lock_view">锁屏界面设置</string>
    <string name="settings_notification_lock_view_summary">「工具箱、相机」、「通知栏显示」等开关设置</string>
    <string name="settings_notification_lock_view_anim">动画表现</string>
    <string name="settings_notification_lock_view_display">显示对象</string>
</resources>