<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.nd.hilauncherdev">
    <CheckBoxPreference android:layout="@layout/preference_normal_layout" android:title="@string/settings_lock_background" android:key="settings_lock_background" android:summary="@string/settings_lock_background_summary" android:widgetLayout="@layout/preferences_radio_checkbox" />
    <CheckBoxPreference android:layout="@layout/preference_normal_layout" android:title="@string/settings_launcher_background" android:key="settings_launcher_background" android:summary="@string/settings_launcher_background_summary" android:widgetLayout="@layout/preferences_radio_checkbox" />
    <CheckBoxPreference android:layout="@layout/preference_normal_layout" android:title="@string/settings_custom_background" android:key="settings_custom_background" android:widgetLayout="@layout/preferences_radio_checkbox" />
</PreferenceScreen>